[package]
name = "leaderboard-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
sha2 = "0.10"
base64ct = "1.5.3"
chrono = "0.4"
#rocket_cors = "0.5.1"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"]
